--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ annotated-types==0.7.0
 anyio==4.11.0
 async-timeout==5.0.1
 asyncpg==0.30.0
-backports.asyncio.runner==1.2.0
+psycopg2-binary==2.9.10
 black==25.9.0
 certifi==2025.10.5
 click==8.1.8
@@ -47,3 +47,4 @@ watchfiles==1.1.0
 websockets==15.0.1
 zipp==3.23.0
 greenlet
+redis==5.2.0
