--- a/.env.example
+++ b/.env.example
@@ -1,17 +1,55 @@
-# Environment variables for Docker Compose
+# Environment variables for Docker Compose and Application
 # Copy this file to .env and update the values
 
 # Database Configuration
+POSTGRES_USER=vichintarka_user
 POSTGRES_PASSWORD=your_secure_password_here
+POSTGRES_DB=vichintarka
+POSTGRES_HOST=localhost
+POSTGRES_PORT=5432
+
+# Alternative: Direct database URL (will override above if set)
+# DATABASE_URL=postgresql+asyncpg://vichintarka_user:your_password@localhost:5432/vichintarka
+
+# Redis Configuration
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_PASSWORD=
+REDIS_DB=0
+
+# Alternative: Direct Redis URL (will override above if set)
+# REDIS_URL=redis://localhost:6379/0
 
 # Application Configuration
 SECRET_KEY=your_very_secure_secret_key_here
 ENVIRONMENT=development
-
-# API Configuration
 PROJECT_NAME=Vichintarka
 VERSION=1.0.0
 DEBUG=true
+API_V1_STR=/api/v1
 
-# CORS Origins (comma-separated)
+# CORS Settings
 BACKEND_CORS_ORIGINS=http://localhost:3000,http://localhost:8080
+
+# JWT Settings (Optional)
+ACCESS_TOKEN_EXPIRE_MINUTES=60
+REFRESH_TOKEN_EXPIRE_MINUTES=10080
+
+# Email Configuration (Optional)
+MAIL_USERNAME=
+MAIL_PASSWORD=
+MAIL_FROM=
+MAIL_PORT=587
+MAIL_SERVER=
+MAIL_FROM_NAME="Vichintarka"
+
+# External APIs (Optional)
+OPENAI_API_KEY=
+ANTHROPIC_API_KEY=
+
+# Monitoring (Optional)
+SENTRY_DSN=
+
+# File Upload Settings (Optional)
+MAX_FILE_SIZE_MB=10
+UPLOAD_DIR=./uploads
