--- a/requirements.txt
+++ b/requirements.txt
@@ -1,50 +1,65 @@
-aiofiles==24.1.0
+# Core FastAPI and web framework
+fastapi==0.118.1
+uvicorn[standard]==0.37.0
+starlette==0.48.0
+pydantic==2.12.0
+pydantic-settings==2.11.0
+
+# Database
+SQLAlchemy==2.0.43
 alembic==1.16.5
-annotated-types==0.7.0
-anyio==4.11.0
-async-timeout==5.0.1
 asyncpg==0.30.0
 psycopg2-binary==2.9.10
+
+# HTTP and async
+httpx==0.28.1
+aiofiles==24.1.0
+anyio==4.11.0
+h11==0.16.0
+
+# Configuration and utilities
+python-dotenv==1.1.1
+python-multipart==0.0.20
+PyYAML==6.0.3
+
+# Development and code quality
 black==25.9.0
+isort==6.1.0
+pre-commit==4.0.1
+
+# Testing
+pytest==8.3.3
+pytest-asyncio==0.24.0
+pytest-cov==6.0.0
+requests==2.32.3
+
+# Dependencies (auto-installed but listed for completeness)
+annotated-types==0.7.0
+async-timeout==5.0.1
 certifi==2025.10.5
 click==8.1.8
 exceptiongroup==1.3.0
-fastapi==0.118.1
-h11==0.16.0
+greenlet==3.2.4
 httpcore==1.0.9
 httptools==0.6.4
-httpx==0.28.1
 idna==3.10
-importlib_metadata==8.7.0
-iniconfig==2.1.0
-isort==6.1.0
 Mako==1.3.10
 MarkupSafe==3.0.3
-mypy_extensions==1.1.0
+mypy-extensions==1.1.0
 packaging==25.0
 pathspec==0.12.1
 platformdirs==4.4.0
 pluggy==1.6.0
-pydantic==2.12.0
-pydantic-settings==2.11.0
-pydantic_core==2.41.1
-Pygments==2.19.2
-pytest==8.4.2
-pytest-asyncio==1.2.0
-python-dotenv==1.1.1
-python-multipart==0.0.20
-pytokens==0.1.10
-PyYAML==6.0.3
+pydantic-core==2.41.1
 sniffio==1.3.1
-SQLAlchemy==2.0.43
-starlette==0.48.0
 tomli==2.2.1
-typing-inspection==0.4.2
-typing_extensions==4.15.0
-uvicorn==0.37.0
+typing-extensions==4.15.0
 uvloop==0.21.0
 watchfiles==1.1.0
 websockets==15.0.1
 zipp==3.23.0
 greenlet
 redis==5.2.0
+mypy==1.13.0
+flake8==7.1.1
+bandit==1.8.0
