--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# =============================================================================
+# PYTHON
+# =============================================================================
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -27,8 +31,6 @@ share/python-wheels/
 MANIFEST
 
 # PyInstaller
-#  Usually these files are written by a python script from a template
-#  before PyInstaller builds the exe, so as to inject date/other infos into it.
 *.manifest
 *.spec
 
@@ -55,19 +57,6 @@ cover/
 *.mo
 *.pot
 
-# Django stuff (if any Django components are used):
-*.log
-local_settings.py
-db.sqlite3
-db.sqlite3-journal
-
-# Flask stuff (if any Flask components are used):
-instance/
-.webassets-cache
-
-# Scrapy stuff:
-.scrapy
-
 # Sphinx documentation
 docs/_build/
 
@@ -76,40 +65,26 @@ docs/_build/
 target/
 
 # Jupyter Notebook
-.ipynb_checkpoints
+.ipynb_checkpoints/
 
 # IPython
 profile_default/
 ipython_config.py
 
 # pyenv
-#   For a library or package, you might want to ignore these files since the code is
-#   intended to run in multiple environments; otherwise, check them in:
-# .python-version
+.python-version
 
 # pipenv
-#   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
-#   However, in case of collaboration, if having platform-specific dependencies or dependencies
-#   having no cross-platform support, pipenv may install dependencies that don't work, or not
-#   install all needed dependencies.
-#Pipfile.lock
+Pipfile.lock
 
 # poetry
-#   Similar to Pipfile.lock, it is generally recommended to include poetry.lock in version control.
-#   This is especially recommended for binary packages to ensure reproducibility, and is more
-#   commonly ignored for libraries.
-#   https://python-poetry.org/docs/basic-usage/#commit-your-poetrylock-file-to-version-control
-#poetry.lock
+poetry.lock
 
 # pdm
-#   Similar to Pipfile.lock, it is generally recommended to include pdm.lock in version control.
-#pdm.lock
-#   pdm stores project-wide configurations in .pdm.toml, but it is recommended to not include it
-#   in version control.
-#   https://pdm.fming.dev/#use-with-ide
+pdm.lock
 .pdm.toml
 
-# PEP 582; used by e.g. github.com/David-OConnor/pyflow and github.com/pdm-project/pdm
+# PEP 582
 __pypackages__/
 
 # Celery stuff
@@ -118,26 +93,6 @@ celerybeat.pid
 
 # SageMath parsed files
 *.sage.py
-
-# Environments
-.env
-.venv
-/.venv/*
-env/
-venv/
-ENV/
-env.bak/
-venv.bak/
-
-# Spyder project settings
-.spyderproject
-.spyproject
-
-# Rope project settings
-.ropeproject
-
-# mkdocs documentation
-/site
 
 # mypy
 .mypy_cache/
@@ -153,15 +108,101 @@ dmypy.json
 # Cython debug symbols
 cython_debug/
 
-# PyCharm
-#  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
-#  be added to the global gitignore or merged into this project gitignore.
-#  For PyCharm Community Edition, use 'PyCharm CE' section.
-.idea/
+# =============================================================================
+# ENVIRONMENT & VIRTUAL ENVIRONMENTS
+# =============================================================================
+
+# Environment files
+.env
+.env.*
+!.env.example
+.envrc
+
+# Virtual environments
+.venv/
+venv/
+env/
+ENV/
+env.bak/
+venv.bak/
+
+# =============================================================================
+# FASTAPI & WEB FRAMEWORKS
+# =============================================================================
+
+# FastAPI specific
+*.log
+logs/
+log/
+
+# Uvicorn
+*.pid
+
+# Static files and uploads
+static/uploads/
+media/
+uploads/
+
+# Session files
+sessions/
+
+# =============================================================================
+# DATABASES
+# =============================================================================
+
+# SQLite databases
+*.db
+*.sqlite
+*.sqlite3
+test.db
+test.sqlite3
+
+# PostgreSQL dumps
+*.sql.gz
+*.dump
+
+# Database backups
+*.bak
+
+# Alembic
+alembic/versions/*.pyc
+alembic/versions/__pycache__/
+
+# =============================================================================
+# REDIS & CACHING
+# =============================================================================
+
+# Redis dump files
+dump.rdb
+*.rdb
+
+# Cache files
+.cache/
+cache/
+
+# =============================================================================
+# DOCKER & CONTAINERS
+# =============================================================================
+
+# Docker
+docker-compose.override.yml
+.dockerignore
+docker-data/
+volumes/
+
+# Container logs
+docker-logs/
+
+# =============================================================================
+# DEVELOPMENT TOOLS & EDITORS
+# =============================================================================
 
 # VS Code
 .vscode/
 *.code-workspace
+
+# PyCharm
+.idea/
 
 # Sublime Text
 *.sublime-project
@@ -182,11 +223,15 @@ auto-save-list
 tramp
 .\#*
 
+# =============================================================================
+# OPERATING SYSTEMS
+# =============================================================================
+
 # macOS
 .DS_Store
 .AppleDouble
 .LSOverride
-Icon
+Icon?
 ._*
 .DocumentRevisions-V100
 .fseventsd
@@ -224,85 +269,73 @@ $RECYCLE.BIN/
 .Trash-*
 .nfs*
 
-# Database files
-*.db
-*.sqlite
-*.sqlite3
-
-# Log files
-*.log
-logs/
-log/
-
-# Environment variables
-.env
-.env.local
-.env.development
-.env.test
-.env.production
-.env.staging
-
-# FastAPI specific
-.pytest_cache/
-.coverage
-htmlcov/
-
-# Alembic (Database migrations)
-# Keep the versions directory but ignore any backup files
-alembic/versions/*.pyc
-alembic/versions/__pycache__/
-
-# Docker
-docker-compose.override.yml
-.dockerignore
-
-# Temporary files
-tmp/
-temp/
-*.tmp
-*.temp
-
-# Backup files
-*.bak
-*.backup
-*.old
+# =============================================================================
+# SECURITY & SECRETS
+# =============================================================================
 
 # SSL certificates and keys
 *.pem
 *.key
 *.crt
 *.cert
+*.p12
+*.pfx
 
 # Configuration files with sensitive data
 config.ini
 settings.ini
 secrets.json
 credentials.json
+.secrets/
 
-# Node.js (if any frontend components)
-node_modules/
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+# API keys and tokens
+.api_keys
+.tokens
 
-# Static files (if served by FastAPI)
-static/uploads/
-media/
+# =============================================================================
+# TEMPORARY & BACKUP FILES
+# =============================================================================
 
-# Test databases
-test.db
-test.sqlite3
+# Temporary files
+tmp/
+temp/
+*.tmp
+*.temp
+*.swp
+*.swo
+
+# Backup files
+*.bak
+*.backup
+*.old
+*~
+
+# =============================================================================
+# TESTING & PROFILING
+# =============================================================================
+
+# Test artifacts
+.coverage.*
+.pytest_cache/
+htmlcov/
+.tox/
+.nox/
 
 # Profiling data
 *.prof
+profile_output/
 
-# Data files (depending on project needs)
-*.csv
-*.json
-*.xlsx
-*.xls
-data/
-datasets/
+# =============================================================================
+# DATA & MODELS
+# =============================================================================
+
+# Data files (uncomment if you don't want to track data)
+# *.csv
+# *.json
+# *.xlsx
+# *.xls
+# data/
+# datasets/
 
 # Machine learning models
 *.pkl
@@ -312,53 +345,62 @@ datasets/
 *.hdf5
 models/
 
-# Jupyter notebook checkpoints
-.ipynb_checkpoints/
+# =============================================================================
+# INFRASTRUCTURE & DEPLOYMENT
+# =============================================================================
 
-# Redis dump files
-dump.rdb
-
-# Terraform (if used for infrastructure)
+# Terraform
 *.tfstate
 *.tfstate.*
 .terraform/
 .terraform.lock.hcl
 
-# Kubernetes (if used)
+# Kubernetes
 *.kubeconfig
+k8s-secrets/
 
-# Docker specific
-docker-compose.override.yml
+# AWS
+.aws/
 
-# FastAPI specific
-.pytest_cache/
-htmlcov/
-.coverage
-coverage.xml
-.coverage.*
+# =============================================================================
+# FRONTEND (if applicable)
+# =============================================================================
 
-# Pre-commit
-.pre-commit-config.yaml.bak
+# Node.js
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.pnpm-debug.log*
 
-# Local development files
+# Build outputs
+dist/
+build/
+
+# =============================================================================
+# MONITORING & LOGGING
+# =============================================================================
+
+# Application logs
+*.log
+logs/
+log/
+
+# Monitoring data
+monitoring/
+metrics/
+
+# =============================================================================
+# PROJECT SPECIFIC
+# =============================================================================
+
+# Local development overrides
+docker-compose.local.yml
 .env.local
 .env.development
 
-# VS Code workspace settings (keep .vscode/ folder ignored but allow specific shared settings if needed)
-.vscode/settings.json
-.vscode/launch.json
-.vscode/tasks.json
-.vscode/*.json
+# Documentation builds
+docs/_build/
+site/
 
-# macOS
-.DS_Store
-
-# SQLite databases (for local testing)
-*.sqlite3
-*.db
-
-# Poetry (if used instead of pip)
-poetry.lock
-
-# uvicorn pid files
-*.pid
+# Custom ignore patterns (add your specific needs here)
